# Instryx

./: .gitignore  .tmLanguage.json  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  ast_renderer.ts  compiler.py  dodeca_core.js  executor.py  instryx_ast_interpreter.py  instryx_async_threading_runtime.py  instryx_binary_emitters.py  instryx_ciams_ai_engine.py  instryx_codegen_sharder.py  instryx_compiler_plugins.py  instryx_dodecagram_ast_visualizer.py  instryx_files_io_json_math.py  instryx_heap_gc_allocator.py  instryx_jit_aot_runner.py  instryx_lexer.py  instryx_llvm_ir_codegen.py  instryx_lsp_server.py  instryx_macro_debugger.py  instryx_macro_transformer_model.py  instryx_match_enum_struct.py  instryx_memory_math_loops_codegen.py  instryx_parser.py  instryx_shell_embedded.py  instryx_syntax_morph.py  instryx_wasm_and_exe_backend_emitter.py  instryx_wasm_host_runtime.py  instryxc.py  macro_overlay.ts  prefetch_helper_plugin.py  (+5 more)
.github/workflows/: ci.yml  release.yml
ciams/: ai-engine.py
examples/: async_concurrency.ix  data_structures.ix  functions.ix  hello_world.ix  variables.ix
hardwarebridge/: instryx_hwbuilder.py
spec/: language.md
src/: lib.rs  main.rs
src/ast/: mod.rs
src/codegen/: mod.rs
src/lexer/: mod.rs
src/parser/: mod.rs
src/runtime/: mod.rs
src/semantic/: mod.rs
src/std_lib/: async_.rs  collections.rs  fs.rs  io.rs  math.rs  mod.rs  net.rs  string.rs  time.rs
tests/: integration_tests.rs
